// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should have a valid structure by default 1`] = `
Object {
  "assets": Array [],
  "commands": Array [],
  "dependencies": Object {},
  "platforms": Object {},
  "project": Object {},
  "reactNativePath": "<<REPLACED>>",
  "root": "<<REPLACED>>",
}
`;

exports[`should load commands from "react-native-foo" and "react-native-bar" packages 1`] = `
Array [
  Object {
    "func": [Function],
    "name": "foo-command",
  },
  Object {
    "func": [Function],
    "name": "bar-command",
  },
]
`;

exports[`should merge project configuration with default values: snapshoting \`react-native-test\` config 1`] = `
Object {
  "assets": Array [
    "foo",
  ],
  "hooks": Object {},
  "name": "react-native-test",
  "params": Array [],
  "platforms": Object {
    "android": null,
    "ios": Object {
      "folder": "<<REPLACED>>/node_modules/react-native-test",
      "libraryFolder": "Libraries",
      "pbxprojPath": "<<REPLACED>>/node_modules/react-native-test/ios/HelloWorld.xcodeproj/project.pbxproj",
      "plist": Array [],
      "podfile": null,
      "podspecPath": null,
      "projectName": "HelloWorld.xcodeproj",
      "projectPath": "<<REPLACED>>/node_modules/react-native-test/ios/HelloWorld.xcodeproj",
      "scriptPhases": Array [],
      "sharedLibraries": Array [],
      "sourceDir": "./abc",
    },
  },
  "root": "<<REPLACED>>/node_modules/react-native-test",
}
`;

exports[`should read a config of a dependency and use it to load other settings 1`] = `
Object {
  "assets": Array [],
  "hooks": Object {},
  "name": "react-native-test",
  "params": Array [],
  "platforms": Object {
    "android": null,
    "ios": Object {
      "folder": "<<REPLACED>>/node_modules/react-native-test",
      "libraryFolder": "Libraries",
      "pbxprojPath": "<<REPLACED>>/node_modules/react-native-test/customLocation/customProject.xcodeproj/project.pbxproj",
      "plist": Array [],
      "podfile": null,
      "podspecPath": "<<REPLACED>>/node_modules/react-native-test/ReactNativeTest.podspec",
      "projectName": "customProject.xcodeproj",
      "projectPath": "<<REPLACED>>/node_modules/react-native-test/customLocation/customProject.xcodeproj",
      "scriptPhases": Array [],
      "sharedLibraries": Array [],
      "sourceDir": "<<REPLACED>>/node_modules/react-native-test/customLocation",
    },
  },
  "root": "<<REPLACED>>/node_modules/react-native-test",
}
`;

exports[`should return dependencies from package.json 1`] = `
Object {
  "react-native": Object {
    "assets": Array [],
    "hooks": Object {},
    "name": "react-native",
    "params": Array [],
    "platforms": Object {
      "android": null,
      "ios": null,
    },
    "root": "<<REPLACED>>/node_modules/react-native",
  },
  "react-native-test": Object {
    "assets": Array [],
    "hooks": Object {},
    "name": "react-native-test",
    "params": Array [],
    "platforms": Object {
      "android": null,
      "ios": Object {
        "folder": "<<REPLACED>>/node_modules/react-native-test",
        "libraryFolder": "Libraries",
        "pbxprojPath": "<<REPLACED>>/node_modules/react-native-test/ios/HelloWorld.xcodeproj/project.pbxproj",
        "plist": Array [],
        "podfile": null,
        "podspecPath": null,
        "projectName": "HelloWorld.xcodeproj",
        "projectPath": "<<REPLACED>>/node_modules/react-native-test/ios/HelloWorld.xcodeproj",
        "scriptPhases": Array [],
        "sharedLibraries": Array [],
        "sourceDir": "<<REPLACED>>/node_modules/react-native-test/ios",
      },
    },
    "root": "<<REPLACED>>/node_modules/react-native-test",
  },
}
`;
